# SleepMonitoringAlgorithm

./: .gitignore  CMakeLists.txt  DataSample.hpp  DateHelper.hpp  Features.cpp  Features.hpp  Overview.mkd  SleepStageAlgorithm.cpp  SleepStageAlgorithm.hpp  main.cpp
data/: PartialNight-01-08.json  Sommeil10MinSample.json  SommeilFullNightSample.json
